crates/solidity-v2/testing/snapshots/cst_output/YulVariableDeclarationStatement/invalid_type/input.sol
contract C {
    function f() {
        assembly {
            // https://github.com/argotorg/solidity/blob/v0.8.27/test/libyul/yulSyntaxTests/invalid_type2.yul
            let x := 1:invalidType
        }
    }
}
